--- a/package.json
+++ b/package.json
@@ -160,7 +160,7 @@
         "@types/bootstrap": "^5.1.6",
         "@types/history": "4.7.9",
         "@types/jest": "^27.0.2",
-        "@types/node": "16.11.6",
+        "@types/node": "^16.11.6",
         "@types/react": "^17.0.33",
         "@types/react-dom": "^17.0.10",
         "@types/react-router": "^5.1.17",
@@ -184,15 +184,15 @@
         "css-loader": "^6.5.0",
         "css-minimizer-webpack-plugin": "^3.1.1",
         "detect-port": "^1.3.0",
-        "electron": "^26.0.0",
-        "electron-builder": "^24.6.3",
-        "electron-chromedriver": "^25.6.0",
+        "electron": "^26.2.2",
+        "electron-builder": "^24.6.4",
+        "electron-chromedriver": "^25.8.2",
         "electron-devtools-installer": "^3.2.0",
         "electron-notarize": "^1.1.1",
         "electron-rebuild": "^3.2.3",
         "eslint": "^7.32.0",
         "eslint-config-erb": "^4.0.3",
-        "eslint-plugin-compat": "^3.13.0",
+        "eslint-plugin-compat": "^4.2.0",
         "eslint-plugin-import": "^2.25.2",
         "eslint-plugin-jest": "^25.2.2",
         "eslint-plugin-jsx-a11y": "^6.4.1",
@@ -236,9 +236,9 @@
         "ansi-regex": "^6.0.1",
         "async": "^3.2.3",
         "bootstrap": "^5.3.1",
-        "bootstrap-icons": "^1.9.1",
+        "bootstrap-icons": "^1.10.5",
         "dayjs": "^1.11.9",
-        "directory-tree": "^3.3.1",
+        "directory-tree": "^3.5.1",
         "electron-debug": "^3.2.0",
         "electron-log": "^4.4.6",
         "electron-updater": "^4.6.5",
@@ -246,10 +246,12 @@
         "history": "4.x.x",
         "loglevel": "^1.8.0",
         "mime-db": "^1.52.0",
+        "mongodb": "^6.1.0",
         "nanoid": "^3.3.1",
         "node-abi": "^3.45.0",
         "node-disk-info": "^1.3.0",
         "node-fetch": "^3.2.10",
+        "openai": "^4.6.0",
         "path-browserify": "^1.0.1",
         "pouchdb-fetch": "^7.3.0",
         "pouchdb-find": "^7.3.0",
